<?xml version="1.0" encoding="utf-8"?><!--
  ~ Dahaeng © 2022 Ji Sungbin, 210202. all rights reserved.
  ~ Dahaeng license is under the MIT.
  ~
  ~ [main_menu.xml] created by Ji Sungbin on 22. 1. 17. 오전 9:59
  ~
  ~ Please see: https://github.com/dahaeng/dahaeng-android/blob/main/LICENSE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/list"
        android:icon="@drawable/ic_round_castle_24"
        android:title="@string/menu_main_place" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/menu_main_favorite" />

    <item
        android:id="@+id/tasking"
        android:icon="@drawable/ic_round_card_travel_24"
        android:title="@string/menu_main_tasking" />

</menu>