<?xml version="1.0" encoding="utf-8"?><!--
 ~ Dahaeng © 2022 Ji Sungbin, 210202. all rights reserved.
 ~ Dahaeng license is under the MIT.
 ~
 ~ [activity_modify_shcedule.xml] created by 210202
 ~
 ~ Please see: https://github.com/dahaeng/dahaeng-android/blob/main/LICENSE.
 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="schedule"
            type="team.dahaeng.android.domain.community.model.schedule.Schedule" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.modifyschedule.ModifyScheduleActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                style="@style/tv_task_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_modify_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@{schedule.title}"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_title"
                app:layout_constraintTop_toTopOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_theme"
                style="@style/tv_task_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="16dp"
                android:text="@string/activity_modify_theme"
                app:layout_constraintBottom_toBottomOf="@+id/sn_theme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sn_theme" />

            <Spinner
                android:id="@+id/sn_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_theme"
                app:layout_constraintTop_toBottomOf="@+id/et_title" />

            <TextView
                android:id="@+id/tv_commonaddress"
                style="@style/tv_task_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_modify_commonaddress"
                app:layout_constraintBottom_toBottomOf="@+id/et_commonaddress"
                app:layout_constraintStart_toStartOf="@+id/tv_theme"
                app:layout_constraintTop_toTopOf="@+id/et_commonaddress" />

            <EditText
                android:id="@+id/et_commonaddress"
                style="@style/tv_task_content_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@{schedule.travel.commonAddress}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_commonaddress"
                app:layout_constraintTop_toBottomOf="@+id/sn_theme" />

            <TextView
                android:id="@+id/tv_totalperiod"
                style="@style/tv_task_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_modify_totalperiod"
                app:layout_constraintBottom_toBottomOf="@+id/tv_totalperiodselect"
                app:layout_constraintStart_toStartOf="@+id/tv_commonaddress"
                app:layout_constraintTop_toTopOf="@+id/tv_totalperiodselect" />

            <TextView
                android:id="@+id/tv_totalperiodselect"
                style="@style/tv_task_content_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@{Long.toString(schedule.travel.totalPeriod.to)}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_totalperiod"
                app:layout_constraintTop_toBottomOf="@+id/et_commonaddress" />

            <TextView

                android:id="@+id/tv_totalprice"
                style="@style/tv_task_content_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_modify_totalprice"
                app:layout_constraintBottom_toBottomOf="@+id/et_totalprice"
                app:layout_constraintStart_toStartOf="@+id/tv_totalperiod"
                app:layout_constraintTop_toTopOf="@+id/et_totalprice" />

            <EditText
                android:id="@+id/et_totalprice"
                style="@style/tv_task_content_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@{Integer.toString(schedule.travel.totalPrice)}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_totalprice"
                app:layout_constraintTop_toBottomOf="@+id/tv_totalperiodselect" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_modify_schedule"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btn_complete"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:text="완료"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>